--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,9 +16,11 @@
     "@types/react": "^18.0.21",
     "@types/react-bootstrap": "^0.32.31",
     "@types/react-dom": "^18.0.6",
+    "@types/react-fontawesome": "^1.6.5",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.2",
+    "i": "^0.3.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
