--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-spring/types": "^9.5.5",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,18 +15,19 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
-    "@types/react-bootstrap": "^0.32.31",
     "@types/react-dom": "^18.0.6",
     "@types/react-fontawesome": "^1.6.5",
     "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
-    "bootstrap": "^5.2.2",
     "i": "^0.3.7",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.5",
+    "react-use-measure": "^2.1.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
